<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <ImageView
            android:id="@+id/closeVerifyDialog"
          android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/x_button">
        </ImageView>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:background="@color/white">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verification_code"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_app"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="16sp"/>
            <EditText
                android:id="@+id/getOtpData"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
               >

            </EditText>

                <LinearLayout
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical"
                    android:id="@+id/verifyOtpLayout"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/darkblue"
                    android:layout_marginTop="30dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:text="@string/verify"/>

                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>


</LinearLayout>