<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:cardCornerRadius="14dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:background="@drawable/registration_custom_design"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/fab_margin"
                android:text="@string/title">
            </TextView>
            <TextView
                android:id="@+id/title"
                android:layout_weight="3.5"
                android:singleLine="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/fab_margin">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="10dp"

            android:layout_marginTop="10dp"
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/fab_margin"
                android:text="@string/message">
            </TextView>
            <TextView
                android:id="@+id/message"
                android:layout_weight="3.5"
                android:singleLine="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/fab_margin">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="10dp"

            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_marginTop="10dp"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/fab_margin"
                android:text="@string/date">
            </TextView>
            <TextView
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:id="@+id/date"
                android:layout_weight="2.5"
                android:singleLine="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/fab_margin">
            </TextView>
            <ImageView
                android:id="@+id/delete_notification"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:tint="@color/Darkwhite"
                android:src="@drawable/ic_baseline_delete_24"
                tools:ignore="UseAppTint">
            </ImageView>
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>