<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".User.UserHomeActivity">

    <RelativeLayout
        android:id="@+id/nju"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/red">
        <TextView
            android:id="@+id/headerName"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="SEARCH PERSON"
            android:gravity="center"
            android:textColor="@color/white">
        </TextView>
        <FrameLayout
            android:id="@+id/notificationLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">
            <ImageView
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:tint="@color/white"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/bell"
                tools:ignore="UseAppTint">
            </ImageView>

            <LinearLayout
                android:layout_width="19dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_background_notification">

                <TextView
                    android:id="@+id/noti_count_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/red">
                </TextView>
            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>
    <FrameLayout
        android:layout_below="@+id/nju"
        android:id="@+id/fragment_contaner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomNavigation" />

    <LinearLayout
        android:weightSum="4"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/Darkwhite"
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <LinearLayout
            android:id="@+id/homeLayout"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.05">

            <ImageView
                android:id="@+id/home_icon"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/search_home">

            </ImageView>

            <TextView
                android:textSize="10sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/add_members_layout"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1">

            <ImageView
                android:id="@+id/add_members_icon"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/add">

            </ImageView>
            <TextView
                android:textSize="10sp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_member">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_status_layout"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".95">

            <ImageView
                android:id="@+id/view_status_icon"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/view">

            </ImageView>
            <TextView
                android:textSize="10sp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_status">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Settings_layout"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".95">

            <ImageView
                android:id="@+id/settings_icon"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/setting">
            </ImageView>
            <TextView
                android:textSize="10sp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting">
            </TextView>
        </LinearLayout>

    </LinearLayout>
<!--    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/navigation_menu"
        app:itemTextColor="@color/black"
        app:itemIconTint="@color/red"
        android:layout_alignParentBottom="true"
        app:backgroundTint="@color/white" />-->

</RelativeLayout>