<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp" />
    <!--  <com.in.kistec.SettingsActivity.SandeepEditText
          android:layout_width="match_parent"
          android:background="@color/blue"
          android:textCursorDrawable="@color/white"
          android:layout_height="wrap_content"/>-->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="80dp">
        </ImageView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:alpha="0.8"
            android:padding="25dp"
            app:cardCornerRadius="14dp">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/registration_custom_design"
                    android:orientation="vertical">


                    <LinearLayout
                        android:id="@+id/l1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"

                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:visibility="gone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:textSize="@dimen/heading"></TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="20dp"
                        android:orientation="horizontal"
                        android:weightSum="6"
                        app:layout_constraintTop_toTopOf="parent">

                        <EditText
                            android:id="@+id/getUserEmail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="5"
                            android:background="@null"
                            android:hint="@string/emails"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/white"
                            android:textColorHint="@color/hint"
                            android:textSize="@dimen/fab_margin"></EditText>

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="1"
                            android:src="@drawable/at"
                            android:tint="@color/white"
                            tools:ignore="UseAppTint"></ImageView>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/white"
                        app:layout_constraintTop_toTopOf="parent"></View>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginRight="20dp"
                        android:orientation="horizontal"
                        android:weightSum="6"
                        app:layout_constraintTop_toTopOf="parent">

                        <EditText
                            android:id="@+id/getUserPassword"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="5"
                            android:background="@null"
                            android:hint="@string/passwords"
                            android:inputType="textPassword"
                            android:textColor="@color/white"
                            android:textColorHint="@color/hint"
                            android:textSize="@dimen/fab_margin"></EditText>

                        <ImageView
                            android:id="@+id/hiden_password_image"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="1"
                            android:src="@drawable/hidden"
                            android:tint="@color/white"
                            tools:ignore="UseAppTint"></ImageView>

                        <ImageView
                            android:id="@+id/visibale_password_image"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="1"
                            android:src="@drawable/eye"
                            android:tint="@color/white"
                            android:visibility="gone"
                            tools:ignore="UseAppTint"></ImageView>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/white"
                        app:layout_constraintTop_toTopOf="parent"></View>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="20dp">

                        <TextView
                            android:id="@+id/forgotPasswordLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:text="@string/forgot_password"
                            android:textColor="@color/white"
                            android:textSize="@dimen/fab_margin"></TextView>
                    </RelativeLayout>


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="90dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="90dp"
                        app:cardCornerRadius="2dp"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:id="@+id/loginLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/ripple_background"
                            android:orientation="horizontal"
                            android:weightSum="3">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="2.2">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:text="@string/login"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/heading"
                                    android:textStyle="bold"></TextView>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.8">

                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:layout_marginTop="10dp"
                                    android:src="@drawable/right_arrow"></ImageView>
                            </LinearLayout>
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:gravity="center"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/njuhnj"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:text="@string/creatAnAccount"
                            android:textColor="@color/white"></TextView>

                        <TextView
                            android:id="@+id/signupLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/njuhnj"
                            android:paddingTop="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="5dp"
                            android:text="@string/signup"
                            android:textColor="@color/white"
                            android:textStyle="bold"></TextView>

                    </RelativeLayout>
                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</FrameLayout>